--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./public/favicon-32x32.png"
+      href="./favicon-32x32.png"
     />
     <title>Filosofem</title>
   </head>
